Fix Safari white space issue with explicit black background

--- a/src/index.css
+++ b/src/index.css
@@ -406,6 +406,9 @@
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    background-color: #000000 !important;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: transparent;
   }
 
   body {
@@ -413,15 +416,22 @@
     padding: 0;
     width: 100%;
     min-height: 100vh;
-    background-color: var(--background);
+    height: 100%;
+    background-color: #000000 !important;
     color: var(--foreground);
+    position: relative;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 
   #root {
     width: 100%;
     min-height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
+    background-color: #000000;
+    position: relative;
   }
 
   :where(:not(:has([class*=" text-"]), :not(:has([class^="text-"])))) h1 {
