--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -191,6 +191,9 @@ html {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+  background-color: #000000 !important;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -198,13 +201,21 @@ body {
   padding: 0;
   width: 100%;
   min-height: 100vh;
+  height: 100%;
+  background-color: #000000 !important;
+  position: relative;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 #root {
   width: 100%;
   min-height: 100vh;
+  height: 100%;
   margin: 0;
   padding: 0;
+  background-color: #000000;
+  position: relative;
 }
 
 @keyframes scale-in {
